# Meeting-Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  md消息.md  pyproject.toml
data-example/: README.md
data-example/input/: README.md
data-example/output/: 示例结果.json
data/input/: 优衣库-残障融合活动沟通会_纪要.docx  办公区环境整改与行政后勤保障协调会.docx  商场AI导购试点需求讨论会.docx  购物中心运营团队人员配置与绩效考核优化会议.docx
data/output/: 优衣库-残障融合活动沟通会_纪要_result.json  办公区环境整改与行政后勤保障协调会_result.json  商场AI导购试点需求讨论会_result.json
docs/: meeting-template-feasibility.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
frontend/src/components/: MeetingEditor.vue  Modal.vue  ScheduleEditor.vue  TagInput.vue  TemplateSelector.vue
load-test/: README.md  results.md  round1-login.js  round2-normal.js  round3-extract.js  round4-transcribe.js  round5-mixed.js  sample.docx  test.js
load-test/results/: round1-login.md
meeting_agent/: config.py  document_loader.py  llm.py  prompts.py  schemas.py  worker.py  workflow.py
meeting_agent/integrations/: __init__.py  test.py  wecom_calendar_client.py  wecom_client.py  wecom_file_client.py  wecom_message_client.py
meeting_agent/services/: asr_service.py  file_service.py  message_service.py  schedule_service.py  tflink_service.py
meeting_agent/transcription/: docx_export.py  pdf_export.py  prompts.py  schemas.py  workflow.py
meeting_agent/web/: auth.py  converter.py  database.py  models.py  run.py
scripts/: migrate_sqlite_to_pg.py
(+14 files in other folders)
