[project]
name = "meeting-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "openpyxl>=3.1.5",
    "pydantic>=2.10.6",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "uvicorn>=0.46.0",
    "psycopg2-binary>=2.9.10",
]
